--- a/大组/week1/LinkedList/大组第一次作业/大组第一次作业.vcxproj
+++ b/大组/week1/LinkedList/大组第一次作业/大组第一次作业.vcxproj
@@ -127,8 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="单链表ADT.cpp" />
-    <ClCompile Include="双链表ADT.cpp" />
+    <ClCompile Include="单链表node.cpp" />
+    <ClCompile Include="双链表ADT测试.cpp" />
+    <ClCompile Include="双链表node.cpp" />
+    <ClCompile Include="单链表ADT测试.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="doublelist.h" />
+    <ClInclude Include="singlelist.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
