--- a/大组/week1/LinkedList/大组第一次作业/大组第一次作业.vcxproj
+++ b/大组/week1/LinkedList/大组第一次作业/大组第一次作业.vcxproj
@@ -127,14 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="单链表node.cpp" />
-    <ClCompile Include="双链表ADT测试.cpp" />
-    <ClCompile Include="双链表node.cpp" />
-    <ClCompile Include="单链表ADT测试.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="node.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="doublelist.h" />
-    <ClInclude Include="singlelist.h" />
+    <ClInclude Include="linkedlist.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
